--- a/3-dot/www-source/index.html
+++ b/3-dot/www-source/index.html
@@ -13,6 +13,8 @@
 
     <footer>
         <div class="center">
+            Trace value :
+            <input id="seekTo" name="seekTo" type="text" value="10"/>
             <button type="button" onclick="start()">Start</button>
             <button type="button" onclick="stop()">Stop and Reset</button>
         </div>
