--- a/5-dot/www-source/index.html
+++ b/5-dot/www-source/index.html
@@ -6,7 +6,6 @@
 </head>
 
 <body>
-
     <div class="point" id="p1"></div>
     <div class="point" id="p2"></div>
     <div class="point" id="p3"></div>
@@ -15,6 +14,8 @@
 
     <footer>
         <div class="center">
+            Trace value :
+            <input id="seekTo" name="seekTo" type="text" value="10"/>
             <button type="button" onclick="start()">Start</button>
             <button type="button" onclick="stop()">Stop and Reset</button>
         </div>
